--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
     }
 
     /* NEW MEDIA QUERY: Tablet / Small Desktop (701px to 1024px) */
-   @media (max-width: 1024px) {
+   @media (min-width: 701px) and (max-width: 1024px) {
     html, body {
         font-size: 15px; /* Adjust base font size for better scaling */
     }
