--- a/index.html
+++ b/index.html
@@ -1946,10 +1946,10 @@
         // Card pool (add your real card images here)
 const cardPool = [
   { src: "images/cards/the stranger card format.jpg", name: "The Stranger" },
-  { src: "images/cards/sage.jpg", name: "The Sage" },
-  { src: "images/cards/warrior.jpg", name: "The Warrior" },
-  { src: "images/cards/merchant.jpg", name: "The Merchant" },
-  { src: "images/cards/trickster.jpg", name: "The Trickster" }
+  { src: "images/cards/horny toad card format.jpg", name: "Horny Toad" },
+  { src: "images/cards/hypno toad card format.jpg", name: "Hypno Toad" },
+  { src: "images/cards/sumo toad card format.jpg", name: "Sumo Toad" },
+  { src: "images/cards/mad toad card format.jpg", name: "Mad Toad" }
 ];
 
 let rewardGiven = false;
