--- a/index.html
+++ b/index.html
@@ -1972,6 +1972,8 @@ let rewardGiven = false;
 
 // Trigger reward when full toad run is complete
 function triggerReward() {
+if (rewardGiven) return; // <---- ADDED GUARD
+    rewardGiven = true;
   const card = document.getElementById('rewardCard');
   const cardImg = card.querySelector('img');
   const wallet = document.getElementById('toadWallet');
