--- a/index.html
+++ b/index.html
@@ -1974,10 +1974,12 @@ let rewardGiven = false;
 function triggerReward() {
 if (rewardGiven) return; // <---- ADDED GUARD
     rewardGiven = true;
+animateWallet();
   const card = document.getElementById('rewardCard');
   const cardImg = card.querySelector('img');
   const wallet = document.getElementById('toadWallet');
   const badge = document.getElementById('walletBadge');
+}
 
   // Pick random card
   const randomCard = cardPool[Math.floor(Math.random() * cardPool.length)];
