--- a/index.html
+++ b/index.html
@@ -2146,7 +2146,7 @@ window.addEventListener('DOMContentLoaded', () => {
 
 <!-- 🃏 Reward Card (appears in center, flies into wallet) -->
 <div id="rewardCard" class="reward-card">
-  <img src="images/cards/the stranger card format.jpg" alt="Toad Card">
+  <img src="" alt="Toad Card">
 </div>
 
 <!-- 📔 Wallet Inventory Modal -->
